change MAVEN_OPTS